@@ -123,7 +123,7 @@ switch ($op){
 	}
 	case "get_stats":
 	{
-		echo api_get_stats ($return_type, $params);
+		echo api_get_stats ($return_type, $params, $token);
 		break;
 	}
 
